# auth

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/app/: main.py
src/app/api/routers/: health.py  login.py  register.py
src/app/schemas/: __init__.py  login_schema.py  register_schema.py  response_schema.py
src/app/services/: login_service.py  register_service.py
tests/integration/: conftest.py  test_health_integration.py  test_login_integration.py  test_register_integration.py
