[project]
name = "algo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn[standard]>=0.42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
