[project]
name = "algo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[tool.ruff]
line-length = 100
